--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,10 +1,13 @@
 @import "nullstyle.scss";
 @import "mainStyle.scss";
+@import "footerStyle.scss";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
 
 .header {
 
     &__top-container {
+        position: relative;
+        z-index: 100;
         width: 100%;
         height: 45px;
         background-color: #333333;
@@ -115,6 +118,8 @@
     }
 
     &__bottom-container {
+        position: relative;
+        z-index: 100;
         height: 112px;
         background-color: #f8f8f8;
         padding: 38px 6vw 0 6vw;
@@ -148,8 +153,13 @@
     }
 
     &__nav-list {
+        position: absolute;
         display: flex;
         padding-top: 5px;
+        z-index: 110;
+        top: 81px;
+        right: calc(97px + 9vw);
+        transition-duration: 500ms;
 
         li{
             cursor: pointer;
@@ -261,6 +271,9 @@
                 padding-right: 70px;
             }
         }
+        &__nav-list{
+            right: 196px;
+        }
     }
 }
 
@@ -279,6 +292,9 @@
             width: 1400px;
             left: calc(-702px + 50vw);
         }
+        &__nav-list{
+            right: 24px;
+        }
     }
 }
 
@@ -288,7 +304,26 @@
             display: block;
         }
         &__nav-list {
-            display: none;
+            position: absolute;
+            z-index: 10;
+            top: 50px;
+            right: 0px;
+            width: 100%;
+            background: #ffffff;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            li{
+                text-align: center;
+                padding: 10px 18px;
+            }
+
+            li:last-child{
+                padding: 10px 18px;
+            }
+        }
+        &__nav-list_opened {
+            top: 143px;
         }
         &__search-wrapper{
             display: none;
@@ -355,6 +390,12 @@
         &__image{
             width: 900px;
             left: calc(-450px + 50vw);
+        }
+        &__nav-list {
+            top: 50px;
+        }
+        &__nav-list_opened {
+            top: 128px;
         }
     }
 }
