--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -226,6 +226,7 @@
         line-height: 26px;
         font-weight: 400;
         color: #989898;
+        cursor: pointer;
     }
 
     &__image-wrapper{
